crdb/prod/route.yaml
apiVersion: traefik.containo.us/v1alpha1
kind: IngressRoute
metadata:
  name: cockroachdb
  namespace: default
spec:
  entryPoints:
  - web
  - websecure
  routes:
  - kind: Rule
    match: Host(`crdb.prod.nsl.xyz`)
    services:
    - name: cockroachdb-public
      port: 8080
      scheme: https
      serversTransport: cockroachdb
